Fixed styling for dynamic lists on mobile

--- a/CancerGov/_src/StyleSheets/_lists.scss
+++ b/CancerGov/_src/StyleSheets/_lists.scss
@@ -111,11 +111,17 @@
     // Title, Date, Desc, Image
 }
 
+// Dynamic List Styles
+
 // Fix for wrapping width issues on Dynamic Lists combined with right nav
 .large-8 .list .container.image + .container.title {
     width: 65%; }
+p.date.dynamic-date {
+	margin: 0; }
+p.description.dynamic-description {
+	margin: 0; }
 
-.accessibility-text {
+.accessibility-text { 
     position: absolute;
     top: -99999px;
 }
